[gd_scene load_steps=19 format=2]

[ext_resource path="res://monsters/eyeball/eyeball.gd" type="Script" id=1]
[ext_resource path="res://Bitty.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://monsters/eyeball/shadow.png" type="Texture" id=3]
[ext_resource path="res://monsters/eyeball/sprite.png" type="Texture" id=4]
[ext_resource path="res://monsters/eyeball/attack effect.png" type="Texture" id=5]
[ext_resource path="res://monsters/eyeball/fire_laser.wav" type="AudioStream" id=6]
[ext_resource path="res://monsters/eyeball/death.wav" type="AudioStream" id=7]
[ext_resource path="res://monsters/eyeball/impact.wav" type="AudioStream" id=8]
[ext_resource path="res://monsters/eyeball/footstep.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]

font_data = ExtResource( 2 )

[sub_resource type="CircleShape2D" id=2]

radius = 5.0

[sub_resource type="RectangleShape2D" id=3]

extents = Vector2( 18, 3 )

[sub_resource type="Animation" id=4]

tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/Laser/AttackEffect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("SFX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0.4 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("SFX:pitch_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SFX:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -10.0 ]
}

[sub_resource type="Animation" id=5]

resource_name = "die"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.317647, 0.317647, 0.317647, 0.52549 ) ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("SFX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.458018,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("SFX:pitch_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SFX:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -5.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Position2D/Shadow:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]

length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 12, 11, 12, 13, 12, 11, 12, 13, 12 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("SFX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("SFX:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.2 ]
}

[sub_resource type="Animation" id=7]

length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="AudioStreamRandomPitch" id=8]

audio_stream = ExtResource( 9 )
random_pitch = 2.0

[sub_resource type="Animation" id=9]

length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 3 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("SFX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": SubResource( 8 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": SubResource( 8 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": SubResource( 8 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": SubResource( 8 )
} ],
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("SFX:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -25.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SFX:pitch_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[node name="Eyeball" type="KinematicBody2D" groups=[
"enemy",
"eyeball",
]]
collision_layer = 2
collision_mask = 7
script = ExtResource( 1 )

[node name="Health" type="Label" parent="."]
margin_left = -10.0
margin_top = -18.0
margin_right = 10.0
margin_bottom = -5.0
custom_fonts/font = SubResource( 1 )
text = "23"
align = 1

[node name="Position2D" type="Position2D" parent="."]

[node name="Shadow" type="Sprite" parent="Position2D"]
modulate = Color( 0.364706, 0.364706, 0.364706, 1 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Position2D"]
texture = ExtResource( 4 )
vframes = 5
hframes = 4
frame = 14

[node name="Hitbox" type="Area2D" parent="Position2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Position2D/Hitbox"]
visible = false
shape = SubResource( 2 )

[node name="Laser" type="Area2D" parent="Position2D"]
z_index = 1

[node name="AttackEffect" type="Sprite" parent="Position2D/Laser"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 23.4711, 0.0144806 )
rotation = 1.5708
scale = Vector2( 3.21276, 2.31545 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Position2D/Laser"]
position = Vector2( 23, 0 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 4 )
anims/die = SubResource( 5 )
anims/hurt = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/move = SubResource( 9 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0
pitch_scale = 1.5
attenuation = 5.46417

[connection signal="area_entered" from="Position2D/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
